--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
-Django==3.1.6
+Django==3.1.7
 django-bootstrap4==2.3.1
+django-filter==2.4.0
+gunicorn==20.0.4
+importlib-metadata==2.1.1
+Pillow==8.1.0
 pytz==2021.1
 soupsieve==2.2
 sqlparse==0.4.1
+zipp==3.4.0
