--- a/.gitignore
+++ b/.gitignore
@@ -58,10 +58,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
+db.sqlite3-jاتبعت ده
 .webassets-cache
 
 # Scrapy stuff:
