--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,13 @@ Django==3.1.7
 django-bootstrap4==2.3.1
 django-filter==2.4.0
 django-heroku==0.3.1
+djangorestframework==3.12.2
 gunicorn==20.0.4
 importlib-metadata==2.1.1
+Markdown==3.3.4
 Pillow==8.1.0
 psycopg2==2.7.7
+psycopg2-binary==2.8.6
 pytz==2021.1
 soupsieve==2.2
 sqlparse==0.4.1
